--- a/index.html
+++ b/index.html
@@ -1,12 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="styles/index.css" rel="stylesheet" />
     <title>Weather Report</title>
 </head>
+
 <body>
-    
+
+    <header>
+        <h1 id="weatherreport-title">Weather Report</h1>
+    </header>
+    <main class="main">
+        <section id="temp-container">
+            <h2 id="temp-title"> Temperature </h2>
+            <!-- <div id = "temp-title"> Temp</div> -->
+            <div>
+                <button id="down-button">⬇️</button>
+                <span id="temp-degree">50</span>
+                <button id="up-button">⬆️</button>
+            </div>
+        </section>
+
+        <section id="city-container">
+            <h2 id="city-title">City</h2>
+            <input type="text" name="city" id="city-input" placeholder="enter city">
+        </section>
+
+
+    </main>
+
+
 </body>
+
+<script src="src/index.js"></script>
+<script src="./node_modules/axios/dist/axios.min.js"></script>
+
 </html>
