added landscape html/css/js

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <h1 id="weatherreport-title">Weather Report</h1>
     </header>
     <main class="main">
+
         <section id="temp-container">
             <h2 id="temp-title"> Temperature </h2>
             <!-- <div id = "temp-title"> Temp</div> -->
@@ -29,6 +30,14 @@
             <h2 id="city-title">City</h2>
             <input type="text" name="city" id="city-input" placeholder="enter city">
         </section>
+
+        <section id="landscape-container">
+            <h2>Landscape</h2>
+            <h2 id="landscape-image">🌲🌲⛄️🌲⛄️🍂🌲🍁🌲🌲⛄️🍂🌲</h2>
+
+        </section>
+
+
 
 
     </main>
